# imdb_synopsis_classifier

./: README.md  main.py  pyproject.toml
notebooks/: test.ipynb
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
